# qwega-monorepo

./: .gitignore  Nquantnik.txt  Nwega.txt.pub
code-to-documentation-agent/: .gitignore  ALIGNMENT_FIX.md  ARCHITECTURE_DIAGRAM.md  DOCUMENTATION_STYLING_FIX.md  LARGE_REPO_HANDLING.md  LLM_CONFIG_IMPLEMENTATION_COMPLETE.md  README.md  SETUP_GUIDE.md  SIMPLE_MERMAID_SOLUTION.md  SOLUTION_SUMMARY.md  TYPESCRIPT_ERROR_FIX.md  UI_IMPROVEMENTS_APPLIED.md  UI_REDESIGN_COMPLETE.md  package-lock.json  policy.rego
quantnik-agent-cicd-pipelines/: README.md
quantnik-anomaly/: .gitignore  Dockerfile  README.md  requirements.txt
quantnik-api-gateway/: .env.example  DEPLOYMENT.md  Dockerfile  README.md  deploy.sh  requirements.txt  run.py
quantnik-auth-service/: .env.example  .gitattributes  .gitignore  DEPLOYMENT.md  README.md  TESTING.md  deploy.sh  entrypoint.sh  pyproject.toml  run.py
quantnik-brd-summary-agent/: .dockerignore  .env.example  DEPLOYMENT.md  README.md  (+6 more)
quantnik-usermanual/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
quantnik-usermanual/userstory/: confluence_tools.py  extract_agent.py  faq_agent.py  file_reader_agent.py  file_reader_tools.py  glossary_agent.py  renderer_agent.py  role_based_agent.py
wega-cara/: .dockerignore  .env.example  LICENSE  README.md  openapi.yaml  pyproject.toml  requirements.txt
wega-cara/cara/: app.py
wega-cara/cara/core/: config.py  dependencies.py
wega-cara/cara/models/: api.py
wega-cara/cara/services/: repo_provider_factory.py
wega-cara/tests/: test_harness_webhook_router.py  test_repo_provider_factory.py  test_webhook_router.py
wega-evals/: .gitignore  README.md  _check_counts.py  _check_traces.py  create_repo.json  dashboard.py  generate_architecture_doc.py  generate_meeting_pptx.py  generate_report.py  generate_report_scripts.py  pyproject.toml  repo_create.json  testcase_to_scripts_evaluation_report.docx  wega_evals_architecture.docx
wega-evals/_pages_disabled/: 1_Evaluation.py  2_Observability.py  9_Diagnostic.py
wega-evals/wega_evals/: __init__.py  __main__.py  agent_profile.py  cli.py  config.py  dashboard_common.py  dataset_manager.py  langfuse_client.py  llm_judge.py  runner.py
wega-evals/wega_evals/profiles/: brd.py  brd_summary.py  cara.py  code_assistant.py  sdlc_orchestrator.py  testcase_to_scripts.py  testcases_to_testdata.py  user_manual.py  user_story.py  userstory_to_testcases.py  userstory_validator.py
wega-evals/wega_evals/views/: __init__.py  evaluation_view.py  observability_view.py
wega-rag/: .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  start.sh
wega-rag/app/: main.py
wega-rag/app/api/: deps.py
wega-rag/app/api/v1/: query.py
wega-rag/app/classification/: llm_classifier.py
wega-rag/app/core/: config.py  exceptions.py  resilience.py
wega-rag/app/db/: session.py
wega-rag/app/feedback/: collector.py
wega-rag/app/ingestion/: deduplication.py
wega-rag/app/memory/: knowledge_graph.py
wega-rag/app/models/: __init__.py  _enums.py  chunk_nc.py  document.py  query_log.py
wega-rag/app/retrieval/: __init__.py
wega-rag/app/schemas/: context.py
wega-rag/sdlc_kb/: Dockerfile
wega-rag/sdlc_kb/app/api/v1/: __init__.py  documents.py  query.py  upload.py
wega-rag/sdlc_kb/app/classification/: __init__.py
wega-rag/sdlc_kb/app/connectors/: confluence_connector.py  website_connector.py
wega-rag/sdlc_kb/app/core/: config.py
wega-rag/sdlc_kb/app/db/: __init__.py  base.py
wega-rag/sdlc_kb/app/feedback/: collector.py
wega-rag/sdlc_kb/app/indexing/: chunker.py
wega-rag/sdlc_kb/app/ingestion/: deduplication.py
wega-rag/sdlc_kb/app/models/: chunk_nc.py
wega-rag/sdlc_kb/app/retrieval/: qdrant_store.py  retriever.py
wega-rag/sdlc_kb/app/schemas/: ingest.py  query.py
(+1461 files in other folders)
