[project]
name = "usermanual"
version = "1.0.0"
description = "User Manual Generator API"
requires-python = ">=3.11"
dependencies = [
    "google-adk",
    "python-docx",
    "markdown",
    "requests",
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "python-dotenv",
    "reportlab",
    "pdfplumber",
    "pandas",
    "openpyxl",
    "msal",
    "pillow",
    "python-pptx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["userstory"]
