[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cara"
version = "0.1.0"
description = "Automated AI code review backend built with FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "google-genai>=1.16.1",
    "jira>=3.8.0",
    "PyGithub>=2.6.1",
    "pydantic>=2.11.0",
    "pydantic-settings>=2.10.1",
    "uvicorn[standard]>=0.35.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.1",
    "mypy>=1.16.0",
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
exclude = "^tests/"
ignore_missing_imports = true
no_implicit_optional = true
python_version = "3.11"
warn_redundant_casts = true
warn_unused_ignores = true

[tool.setuptools.packages.find]
include = ["cara*"]
