[project]
name = "sdlc-kb"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    # API
    "fastapi==0.135.3",
    "uvicorn[standard]==0.44.0",
    "python-multipart==0.0.26",
    "pydantic==2.13.1",
    "pydantic-settings==2.13.1",
    # Database
    "sqlalchemy[asyncio]==2.0.49",
    "psycopg[binary]==3.3.3",
    # Document parsing
    "pymupdf==1.27.2.2",
    "python-docx==1.2.0",
    "openpyxl==3.1.5",
    "pandas==3.0.2",
    # Vertex AI
    "vertexai==1.71.1",
    # Chunking
    "langchain==1.2.15",
    "langchain-text-splitters==1.1.1",
    # Vector DB
    "qdrant-client==1.17.1",
    # Reranking
    "sentence-transformers>=3.0.0",
    # Web scraping
    "beautifulsoup4==4.14.3",
    "lxml==6.0.4",
    # Observability
    "structlog==25.5.0",
    # Utils
    "python-dotenv==1.2.2",
    "aiofiles==25.1.0",
    "httpx==0.28.1",
    "pyyaml==6.0.3",
    # Guardrails / PII
    "guardrails-ai==0.10.0",
    "presidio-analyzer==2.2.362",
    "presidio-anonymizer==2.2.362",
    "spacy==3.8.14",
    "better-profanity==0.7.0",
    "scikit-learn==1.8.0",
    # Async event loop
    "uvloop==0.21.0; sys_platform != 'win32'",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.uv]
package = false
native-tls = true
